# mcproto-rs

./: .gitignore  Cargo.toml  README.md
mcproto/: Cargo.toml
mcproto/src/: lib.rs  packet.rs
mcproto/src/v1_7_10/: mod.rs
serde-mcproto/: Cargo.toml
serde-mcproto/src/: error.rs  lib.rs
serde-mcproto/src/de/: de.rs  mod.rs  read.rs
serde-mcproto/src/ser/: mod.rs  ser.rs  write.rs
serde-mcproto/src/types/: array.rs  chat.rs  chunk.rs  entity_metadata.rs  mod.rs  nbt.rs  slot.rs  uuid.rs  var.rs
tokio-serde-mcproto/: Cargo.toml
tokio-serde-mcproto/src/: codec.rs  lib.rs  transport.rs
