[package]
name = "tokio-serde-mcproto"
version = "0.1.0"
authors = ["Nail Khanipov <foxflameless@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha.2"
serde-mcproto = {path = "../serde-mcproto"}
bytes = "0.4.12"
serde = "1.0.98"

[dependencies.futures-preview]
version = "=0.3.0-alpha.18"

[dependencies.futures-util-preview]
version = "=0.3.0-alpha.18"
